Fixed spacing in property tabs menu

--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ a {
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
-    padding: 0px 55px 30px 12px;
+    padding: 0px 55px 20px 12px;
     -webkit-overflow-scrolling: touch;
 }
 
@@ -192,7 +192,7 @@ a {
 .selectedproperty {
     background:linear-gradient(#222,#222) bottom no-repeat;
     background-size: 46% 4.5px;
-    padding-bottom: 46px;
+    padding-bottom: 36px;
 }
 
 .notselectedproperty a {
